# mini-tool

./: .gitignore  =0.3.0  AGENTS.md  MCP.md  Makefile  README.md  app_config.json  complete_app.py  comprehensive_test.py  debug_full_app.py  debug_image_6.py  debug_rename.py  debug_run.py  epic-2-completion-report.md  file.py  minimal_app.py  operation_history.db  pyproject.toml  requirements.txt  run_app.py  simple_test.py  stable_full_app.py  startup_error.txt  test.db  test_batch_rename.py  test_conflict_cases.py  test_drag_drop.py  test_file_path_debug.py  test_image_copy_5.py  test_normalize.py  trace_folder_loading.py  verify_filter_logic.py  working_app.py  x
.bmad-core/: install-manifest.yaml
.bmad-core/agents/: analyst.md  architect.md  bmad-master.md  bmad-orchestrator.md  dev.md  pm.md  po.md  qa.md  sm.md  ux-expert.md
.bmad-core/tasks/: expert-consultation.md  provide-recommendations.md  save-consultation.md
.claude/: settings.json  settings.local.json
.claude/commands/: .completion-config.json  expert.md
docs/: architecture.md  brief.md  front-end-spec.md  prd.md
docs/architecture/: api-specification.md  backend-architecture.md  checklist-results-report.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  deployment-architecture.md  error-handling-strategy.md  external-apis.md  frontend-architecture.md  index.md  (+7 more)
packaging/: build.py  installer.nsi  license.txt  version.json  version.py  version_info.txt
scripts/: build.bat  build_release.bat
src/: main.py
tests/: test_distribution.py
(+102 files in other folders)
